@@ -179,7 +179,10 @@ module ActiveScaffold::DataStructures
     # describes how to search on a column
     #   search = true           default, uses intelligent search sql
     #   search = "CONCAT(a, b)" define your own sql for searching. this should be the "left-side" of a WHERE condition. the operator and value will be supplied by ActiveScaffold.
-    attr_writer :search_sql
+    #   search = [:a, :b]       searches in both fields
+    def search_sql=(value)
+      @search_sql = (value == true || value.is_a?(Proc)) ? value : Array(value)
+    end
     def search_sql
       self.initialize_search_sql if @search_sql === true
       @search_sql
